--- a/css/style.css
+++ b/css/style.css
@@ -706,8 +706,14 @@ footer .footer_image img{
 		border-radius: 6px;
 		box-shadow: 1px 1px 4px 0 #c6c6c666;
 	}
+	nav.navbar .navbar-nav .nav-item {
+		padding-left: 10px;
+	}
 	.container{
 		max-width: 600px;
+	}
+	.text_button a.btn-positive {
+		padding: 4px 10px;
 	}
 	h1.text_title{
 		font-size: 35px;
