--- a/css/landingstyle.css
+++ b/css/landingstyle.css
@@ -154,7 +154,7 @@ nav.navbar {
 .about_wrapper{
     background: #FFF9EA;
     padding-top: 750px;
-    padding-bottom: 120px;
+    padding-bottom: 129px;
 }
 .aglc_content{
     background-color: #FFF9EA;
@@ -180,7 +180,7 @@ nav.navbar {
     text-align: center;
     padding: 26px 20px 22px 20px;
     margin-left: auto;
-    margin-right: 5%;
+    margin-right: 30px;
 }
 .aglc_menu_wrap h3{
     padding: 0;
@@ -206,6 +206,10 @@ nav.navbar {
     line-height: 21px;
     margin-bottom: 0;
 }
+.white_box_wrapper .box_wrap{
+    display: flex;
+    align-items: center;
+}
 .content_wrap p{
     color: #705147;
     font-family: 'Lato',sans-serif;
@@ -218,17 +222,25 @@ nav.navbar {
 .content_wrap{
     padding-top: 10px;
 }
-.white_box_wrapper.row{
-    display: flex;
-    justify-content: center;
-    padding-top: 68px;
-}
 .white-box{
     background-color: #FFFFFF;
     border-radius: 9px;
     box-shadow: 0 2px 30px 0 rgba(48, 70, 89, 0.04);
     max-width: 628px;
-    padding: 38px 45px 33px 30px;
+    padding: 40px 45px 32px 33px;
+}
+.white_box_wrapper{
+    display: flex;
+    justify-content: center;
+    padding-top: 68px;
+    width: 100%;
+
+}.white_box_wrapper .left{
+    width: 30%;
+    padding-right: 5%;
+}
+.white_box_wrapper .right{
+    width: 68%;
 }
 .white_box_wrapper h2{
     color: #3A2315;
@@ -244,20 +256,254 @@ nav.navbar {
     font-size: 20px;
     font-weight: 400;
     letter-spacing: 1.54px;
-    text-align: center;
-    
-    left: -3em;
+    text-align: center; 
+    top: -3em;
 }
 .about_wrapper .white-box .form-group{
     display: flex;
     align-items: center;
     margin-bottom: 10px;
 }
-
-
-
-
-
+.white-box .text_button a.btn-positive {
+    padding: 7px 37px;
+}
+.about_wrapper .white-box .input_content {
+    width: 51%;
+    padding-right: 0;
+    margin-right: 8%;
+}
+.about_wrapper .white-box .select2 {
+    background-color: #FFF4EB;
+    border: none;
+    padding: 5px 10px;
+}
+.white_box_wrapper p.form_text{
+    color: #806E69;
+    font-family: 'Lato',sans-serif;
+    font-style: italic;
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 20px;
+    margin-bottom: 0;
+}
+.about_wrapper .white-box .select2-selection{
+	background-color: transparent;
+	border:none;
+	outline: none;
+	box-shadow: none;
+	background-image: url('../images/chevron.svg') !important;
+	background-repeat: no-repeat;
+	background-position: 94% 59%;
+	background-size: 12px;
+	color: #2B2B2B;
+	font-family: 'Lato',sans-serif;
+	font-size: 13px;
+	font-weight: 700;
+	line-height: 20px;
+	text-align: left;
+}
+.select2-selection__arrow {
+    display: none;
+}
+.milestones_wrapper{
+    padding:  125px 0 107px 0 ;
+    justify-content: center;
+}
+.milestones_wrapper ul{
+    list-style: none;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    padding-bottom: 67px;
+    margin-bottom: 0;
+}
+.milestones_wrapper .milestone_content{
+    max-width: 800px;
+    margin: 0 auto;
+}
+.milestones_wrapper h2{
+    color: #3A2315;
+    text-align: center;
+    margin-bottom: 0;
+}
+.milestones_wrapper .title_wrap{
+    margin: 0 auto;
+    padding-bottom: 80px;
+    max-width: 733px;
+}
+.milestones_wrapper ul h4 span {
+    display: block;
+}
+.milestones_wrapper .bottom_wrap{
+    color: #3A2315;
+    font-family: 'Lato',sans-serif;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 20px;
+    text-align: left;
+    margin-top: 5px;
+}
+.milestones_wrapper h4{
+    color: #3A2315;
+    font-size: 36px;
+}
+.milestones_wrapper ul > li::before {
+    content: '';
+    background-image: url(../images/contrast_icon.svg);
+    position: absolute;
+    top: 0;
+    left: -55px;
+    width: 40px;
+    height: 40px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+}
+.text_button a.btn-buynow {
+    background-color: #FFF0E1;
+    padding: 8px 45px;
+    color: #FF7900;
+    border-color: #FFF0E1;
+}
+.milestones_wrapper .text_button{
+    text-align: center;
+}
+.aboutraffle_wrapper{
+    background-color: #FFF9EA;
+    padding: 122px 0 112px 0 ;
+}
+.aboutraffle_wrapper h3{
+    text-align: left;
+    color: #3A2315;
+}
+.content_wrap p:nth-child(2){
+    margin-bottom: 0;
+}
+h4.title_wrapper{
+    color: #3A2315;
+}
+.rules_wrapper{
+    padding: 60px 0 40px 0 ;
+}
+.rules_wrapper img {
+    width: 19px;
+    margin-left: 20px;
+    transition: 0.3s all linear;
+}
+.rules_wrapper .list_content ul li {
+    color: #3B5266;
+    font-family: 'Lato',sans-serif;
+    font-size: 17px;
+    font-weight: 400;
+    line-height: 25px;
+    text-align: left;
+    margin-bottom: 40px;
+    position: relative;
+}
+.rules_wrapper .list_content ul li:nth-child(4),:nth-child(8) {
+    margin-bottom: 0;
+}
+.rules_wrapper .list_content ul{
+    list-style: none;
+    counter-reset: item;
+    column-count: 2;
+    column-gap:8%;
+}
+.rules_wrapper .list_content{
+    padding: 40px 140px 0 160px;
+}
+.rules_wrapper .list_content ul li:before {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    content: counters(item, ".");
+    counter-increment: item;
+    top: 0;
+    left: -45px;
+    z-index: 2;
+    background-color: #FFEA9E;
+    border-radius: 100%;
+    width: 30px;
+    height: 30px;
+    /* min-width: 30px;
+    min-height: 30px;
+    max-width: 30px;
+    max-height: 30px; */
+    color: #304659;
+    font-family: 'Lato',sans-serif;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 20px;
+}
+.update_wrapper{
+    background-color: #FFF9EA;
+    padding: 60px 0 70px 0;
+}
+.update_content_wrap{
+    padding-top: 50px;
+}
+.testimonial_box {
+    width: 100%;
+    float: left;
+    background-color: #FBF2DD;
+}
+.testimonial_box .left {
+    float: left;
+    width: 34%;
+}
+.testimonial_box img {
+    margin: 0;
+    width: 100% !important;
+}
+.testimonial_box p {
+    color: #304659;
+    font-family: 'Lato',sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 25px;
+    text-align: left;
+    margin-bottom: 0;
+}
+.testimonial_box .right {
+    width: 66%;
+    float: left;
+    padding: 20px 40px 45px 25px;
+}
+.testimonial_box .top-title {
+    font-size: 15px;
+    text-transform: initial;
+    margin-bottom: 15px;
+}
+.update_wrapper .owl-dots {
+    padding-top: 40px;
+}
+.update_wrapper .owl-dots span {
+	background-color: #0091FF;
+	height: 10px;
+	width: 10px;
+	border-radius: 100%;
+	display: block;
+}
+.update_wrapper .owl-dots button{
+	margin-right: 10px;
+}
+.update_wrapper .owl-dots button.active span{
+	border: 1px solid #3B5266;
+	background-color: transparent;
+}
+.landing_footer .copy_right_text {
+    text-align: center;
+    color: #FFFFFF;
+    font-family: 'Lato',sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+    padding: 55px 0 56px 0;
+}
+footer .copy_right_text a.footer_brand {
+    max-width: 44px;
+    display: inline-block;
+}
 
 
 
