--- a/css/landingstyle.css
+++ b/css/landingstyle.css
@@ -1,3 +1,7 @@
+*,h1,h2,h3,h4,h5,h6,p,nav,ul{
+    padding: 0;
+    margin: 0;
+}
 .landing_menu_wrapper{
     background-image:url(../images/landing_img.png);
     padding-bottom: 0;
@@ -318,7 +322,7 @@ nav.navbar {
     margin-bottom: 0;
 }
 .milestones_wrapper .milestone_content{
-    max-width: 800px;
+    max-width: 850px;
     margin: 0 auto;
 }
 .milestones_wrapper h2{
@@ -341,18 +345,19 @@ nav.navbar {
     font-weight: 400;
     line-height: 20px;
     text-align: left;
-    margin-top: 5px;
+    margin-top: 6px;
+    padding-left: 59px;
 }
 .milestones_wrapper h4{
     color: #3A2315;
     font-size: 36px;
+    margin-bottom: 0;
+    padding-left: 59px;
 }
 .milestones_wrapper ul > li::before {
     content: '';
     background-image: url(../images/contrast_icon.svg);
     position: absolute;
-    top: 0;
-    left: -55px;
     width: 40px;
     height: 40px;
     background-repeat: no-repeat;
@@ -381,9 +386,10 @@ nav.navbar {
 }
 h4.title_wrapper{
     color: #3A2315;
+    text-align: left;
 }
 .rules_wrapper{
-    padding: 60px 0 40px 0 ;
+    padding: 60px 0 46px 0 ;
 }
 .rules_wrapper img {
     width: 19px;
@@ -400,9 +406,6 @@ h4.title_wrapper{
     margin-bottom: 40px;
     position: relative;
 }
-.rules_wrapper .list_content ul li:nth-child(4),:nth-child(8) {
-    margin-bottom: 0;
-}
 .rules_wrapper .list_content ul{
     list-style: none;
     counter-reset: item;
@@ -411,6 +414,9 @@ h4.title_wrapper{
 }
 .rules_wrapper .list_content{
     padding: 40px 140px 0 160px;
+}
+#chevron_down_icon {
+    cursor: pointer;
 }
 .rules_wrapper .list_content ul li:before {
     position: absolute;
@@ -505,6 +511,31 @@ footer .copy_right_text a.footer_brand {
     display: inline-block;
 }
 
+@media (max-width: 767px){
+
+}
+
+
+
+@media (max-width: 1024px){
+    .landing_menu_wrapper{
+        max-height: 430px;
+    }
+    .landing_menu_wrapper #navbarSupportedContent {
+        top: 50px;
+    } 
+    .landing_menu_wrapper nav.navbar .nav_menu_wrpper{
+        padding: 10px 19px 9px 13px;
+    }      
+}
+
+
+
+@media (max-width: 1024px){
+    .container {
+        max-width: 950px;
+    }
+}
 
 
 
