--- a/css/landingstyle.css
+++ b/css/landingstyle.css
@@ -75,6 +75,9 @@ nav.navbar {
     z-index: 3;
     width: 100%;
 }
+.puma_wrap_content .left span {
+    margin-bottom: -10px;
+}
 .puma_wrap_content{
     max-width: 946px;
     width: 100%;
@@ -86,7 +89,7 @@ nav.navbar {
     overflow: hidden;
     width: 100%;
     float: left;
-    margin-top: 180px;
+    margin-top: 193px;
     box-shadow: 0 2px 44px 0 rgba(0, 0, 0, 0.07);
 }
  .service_header{
@@ -143,21 +146,22 @@ nav.navbar {
 }
 .service_content h3{
     color: #3A2315;
-    padding-bottom: 20px;
+    padding: 20px 0;
 }
 .service_content .top-title{
     color: #898989;
+    margin-bottom: 0;
 }
 .service_content p.text{
     color: #3B5266;
-    padding-bottom: 30px;
+    padding-bottom: 40px;
 }
 .service_content .text_button a.btn-positive {
     padding: 7px 37px;
 }
 .about_wrapper{
     background: #FFF9EA;
-    padding-top: 750px;
+    padding-top: 700px;
     padding-bottom: 129px;
 }
 .aglc_content{
@@ -226,7 +230,7 @@ nav.navbar {
 .content_wrap{
     padding-top: 10px;
 }
-.white-box{
+.white_box_wrapper .white-box{
     background-color: #FFFFFF;
     border-radius: 9px;
     box-shadow: 0 2px 30px 0 rgba(48, 70, 89, 0.04);
@@ -276,6 +280,9 @@ nav.navbar {
     padding-right: 0;
     margin-right: 8%;
 }
+.about_wrapper .white-box .text_button{
+    width: 42%;
+}
 .about_wrapper .white-box .select2 {
     background-color: #FFF4EB;
     border: none;
@@ -310,7 +317,7 @@ nav.navbar {
     display: none;
 }
 .milestones_wrapper{
-    padding:  125px 0 107px 0 ;
+    padding:  125px 0 121px 0 ;
     justify-content: center;
 }
 .milestones_wrapper ul{
@@ -348,11 +355,11 @@ nav.navbar {
     margin-top: 6px;
     padding-left: 59px;
 }
-.milestones_wrapper h4{
+.milestones_wrapper ul h4{
     color: #3A2315;
     font-size: 36px;
-    margin-bottom: 0;
     padding-left: 59px;
+
 }
 .milestones_wrapper ul > li::before {
     content: '';
@@ -469,7 +476,6 @@ h4.title_wrapper{
     font-weight: 400;
     line-height: 25px;
     text-align: left;
-    margin-bottom: 0;
 }
 .testimonial_box .right {
     width: 66%;
@@ -510,14 +516,241 @@ footer .copy_right_text a.footer_brand {
     max-width: 44px;
     display: inline-block;
 }
-
-@media (max-width: 767px){
-
+footer{
+    padding-bottom: 0;
 }
 
+@media(max-width: 440px){
+    .service_header .left{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+}
+@media (max-width: 767px){
+    .landing_menu_wrapper .nav-logo img {
+        max-width: 32px;
+        margin-right: 10px;
+    }
+    .toggle_button{
+        width: 26px;
+    }
+    .landing_menu_wrapper{
+        max-height: initial;
+        padding-bottom: 40px;
+    }
+    .landing_menu_wrapper #navbarSupportedContent {
+        top: 69px;
+    } 
+    .landing_menu_wrapper nav.navbar .nav_menu_wrpper{
+        padding: 6px 10px 7px 10px;
+    }
+    .service_header .left img {
+        max-width: 80px;
+        margin-right: 0;
+    }
+    .service_header .left {
+        font-size: 18px;
+        line-height: 30px;
+        justify-content: center;
+        margin-bottom: 20px;
+    }
+    .service_header .right{
+        margin: 0 auto;
+    }
+    .service_header p  {
+       text-align: center;
+        padding-bottom: 6px;
+    }
+    .media_wrap a img{
+        width: 22px;
+    }
+    .media_wrap{
+        justify-content: center;
+        margin-top: 10px;
+    }
+    .service_header {
+        padding: 16px 20px 20px 20px;
+    }
+    .puma_service_box .service_body {
+        padding: 20px 20px;
+    }
+    .service_content p.text {
+        font-size: 14px;
+        padding-bottom: 20px;
+    }
+    .service_content h3 {
+        padding: 14px;
+    }
+    .aglc_menu_wrap h3 {
+        text-align: center;
+    }
+    .about_wrapper {
+        padding-top: 700px;
+        padding-bottom: 60px;
+    }
+    .about_wrapper .container {
+        max-width: 1200px;
+    }
+    .aglc_menu_wrap .aglc_box{
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
+    .aglc_menu_wrap .square_box{
+        margin: 0 auto;
+        height: auto;
+        padding: 16px 15px 18px 16px;
+    }
+    .aglc_menu_wrap h3{
+        margin-bottom: 10px;
+    }
+    .aglc_menu_wrap h6{
+        font-size: 30px;
+        line-break: 36px;
+    }
+    .square_box img{
+        margin-bottom: 10px;
+    }
+    .content_wrap p{
+        font-size: 16px;
+        line-height: 26px;
+        text-align: center;
+        margin-bottom: 18px;
+    }
+    .white_box_wrapper {
+        padding-top: 20px;
+    }
+    .white_box_wrapper .white-box {
+        padding: 25px 15px;
+    }
+    .white_box_wrapper .box_wrap {
+        flex-direction: column;
+    }
+    .white_box_wrapper h2 {
+        font-size: 60px;
+        line-height: 60px;
+    }
+    .white_box_wrapper .white-box sup {
+        font-size: 18px;
+        top: -2em;
+    }
+    .white_box_wrapper .left, .white_box_wrapper .right{
+        width: 100%;
+    }
+    .about_wrapper .white-box .input_content {
+        width: 60%;
+        margin-right: 5%;
+    }
+    .about_wrapper .white-box .text_button{
+        width: 35%;
+    }
+    .aglc_menu_wrap {
+        padding: 55px 0 20px 0;
+        align-items: center;
+    }
+    .milestones_wrapper {
+        padding: 40px 0 40px 0;
+    }
+    .milestones_wrapper .title_wrap {
+        padding-bottom: 40px;
+    }
+    .milestones_wrapper ul h4 {
+        font-size: 19px;
+        line-height: 26px;
+        text-align: left;
+        padding-left: 40px;
+    }
+    .milestones_wrapper ul > li::before {
+        width: 32px;
+        height: 32px;
+    }
+    .milestones_wrapper .bottom_wrap {
+        font-size: 14px;
+        line-height: 18px;
+        margin-top: 5px;
+        padding-left: 38px;
+    }
+    .milestones_wrapper ul {
+        justify-content: space-around;
+        padding-bottom: 40px;
+    }
+    .aboutraffle_wrapper {
+        padding: 40px 0 40px 0;
+    }
+    .aboutraffle_wrapper h3 {
+        text-align: center;
+    }
+    .aboutraffle_wrapper .left{
+        padding-bottom: 20px;
+    }
+    .rules_wrapper {
+        padding: 40px 0 40px 0;
+    }
+    .rules_wrapper .list_content {
+        padding: 0;
+        padding-top: 30px;
+    }
+    .rules_wrapper .list_content ul {
+        column-count: 1;
+        column-gap: 0;
+        padding-left: 38px;
+    }
+    .rules_wrapper .list_content ul li {
+        font-size: 14px;
+        line-height: 22px;
+        margin-bottom: 20px;
+    }
+    .rules_wrapper img {
+        width: 14px;
+        margin-left: 10px;
+    }
+    .update_wrapper {
+        padding: 40px 0 40px 0;
+    }
+    h4.title_wrapper {
+        text-align: center;
+    }
+    .update_content_wrap {
+        padding-top: 30px;
+    }
+    .testimonial_box .right{
+        padding: 15px 20px 30px 20px;
+    }
+    .testimonial_box p {
+        font-size: 16px;
+        line-height: 24px;
+        text-align: center;
+    }
+    .testimonial_box .top-title {
+        font-size: 14px;
+        line-height: 20px;
+        text-align: center;
+        margin-bottom: 12px;
+    }
+    .update_wrapper .owl-dots {
+        padding-top: 25px;
+        text-align: center;
+    }
+    .landing_footer .copy_right_text {
+        font-size: 16px;
+        padding: 20px 0 ;
+    }
+    footer .copy_right_text a.footer_brand {
+        max-width: 38px;
+    }
+    .milestones_wrapper ul > li{
+        margin-bottom: 24px;
+    }
+}
 
-
-@media (max-width: 1024px){
+@media(min-width: 768px) and (max-width: 1024px){
+    .landing_menu_wrapper .nav-logo img {
+        max-width: 34px;
+        margin-right: 12px;
+    }
+    .toggle_button{
+        width: 29px;
+    }
     .landing_menu_wrapper{
         max-height: 430px;
     }
@@ -526,19 +759,163 @@ footer .copy_right_text a.footer_brand {
     } 
     .landing_menu_wrapper nav.navbar .nav_menu_wrpper{
         padding: 10px 19px 9px 13px;
-    }      
-}
-
-
-
-@media (max-width: 1024px){
+    }   
     .container {
         max-width: 950px;
     }
+    .service_header .left {
+        font-size: 22px;
+        line-height: 40px;
+    }
+    .puma_service_box{
+        margin-top: 130px;
+    }
+    .puma_wrap_content {
+        max-width: 800px;
+    }
+    .about_wrapper {
+        padding-top: 580px;
+        padding-bottom: 70px;
+    }
+    .media_wrap a img {
+        width: 26px;
+    }
+    .service_header {
+        padding: 20px 24px 22px 24px;
+    }
+    .puma_service_box .service_body {
+        padding: 40px 55px 50px 55px;
+    }
+    .service_content p.text {
+        font-size: 15px;
+        line-height: 22px;
+        padding-bottom: 30px;
+    } 
+    .service_content h3{
+        padding-bottom: 18px;
+    }
+    .aglc_menu_wrap {
+        padding: 40px 0 42px 0;
+        align-items: center;
+    }
+    .content_wrap p {
+        font-size: 18px;
+        line-height: 26px;
+        margin-bottom: 20px;
+    }
+    .white_box_wrapper {
+        padding-top: 40px;
+    }
+    .white_box_wrapper h2 {
+        font-size: 82px;
+        line-height: 54px;
+    }
+    .white_box_wrapper .white-box sup {
+        font-size: 18px;
+        top: -2em;
+    }
+    .white_box_wrapper .white-box{
+        padding: 26px 38px 30px 30px;
+    }
+    .milestones_wrapper .title_wrap {
+        padding-bottom: 54px;
+    }
+    .milestones_wrapper {
+        padding: 75px 0 91px 0;
+    }
+    .milestones_wrapper ul {
+        padding-bottom: 47px;
+        justify-content: space-around;
+    }   
+    .milestones_wrapper ul h4{
+        font-size: 30px;
+        padding-left: 52px;
+    }    
+    .aboutraffle_wrapper {
+        padding: 80px 0 72px 0;
+    }   
+    .rules_wrapper .list_content {
+        padding: 36px 40px 0 58px;
+    }   
+    .rules_wrapper .list_content ul li {
+        font-size: 16px;
+        line-height: 24px;
+        margin-bottom: 26px;
+    }
+    .rules_wrapper img {
+        margin-left: 16px;
+    }
+    .update_wrapper {
+        padding: 40px 0 50px ;
+    }
+    .testimonial_box p {
+        font-size: 17px;
+        line-height: 23px;
+    }   
+    .testimonial_box .top-title{
+        font-size: 14px;
+        margin-bottom: 8px;
+        text-align: left;
+    }
+    .testimonial_box .right {
+        padding: 17px 21px 19px 18px;
+    }
+    .update_wrapper .owl-dots {
+        padding-top: 30px;
+    }
+    .aglc_menu_wrap .square_box{
+        height: 170px;
+        padding: 19px 18px 18px 18px;
+        margin-right: 20px;
+    }
+    .square_box img{
+        margin-bottom: 12px;
+    }
+    .aglc_menu_wrap h6{
+        font-weight: 600;
+        font-size: 34px;
+        line-height: 38px;
+    }
+    .aglc_menu_wrap h3{
+        margin-bottom: 16px;
+    }
+    .square_box p {
+        font-size: 14px;
+    }
+    .landing_footer .copy_right_text {
+        font-size: 18px;
+        padding: 30px;
+    }
+    footer .copy_right_text a.footer_brand {
+        max-width: 38px;
+    }
+
 }
 
-
-
+@media(max-width: 991px){
+    .aglc_menu_wrap h3{
+        font-size: 28px;
+    }
+    .testimonial_box .left, .testimonial_box .right {
+        width: 100%;
+    }    
+    .testimonial_box .left{
+        max-height: 300px;
+        overflow: hidden;
+    }
+}
+@media(max-width: 485px){
+    .milestones_wrapper ul {
+        flex-direction: column;
+        padding-left: 50px;
+    }
+    .milestones_wrapper ul h4{
+        padding-left: 45px;
+    }
+    .milestones_wrapper .bottom_wrap {
+        padding-left: 45px;
+    }
+}
 
 
 
