--- a/css/landingstyle.css
+++ b/css/landingstyle.css
@@ -5,7 +5,7 @@
 .landing_menu_wrapper{
     background-image:url(../images/landing_img.png);
     padding-bottom: 0;
-    position: relative;
+    
     max-height: 500px;
     background-position: 100% 100%;
     background-size: cover;
@@ -43,7 +43,7 @@ nav.navbar {
     padding: 0;
 }
 .landing_menu_wrapper{
-    position: relative;
+
     width: 100%;
     z-index: 3;
     float: left;
@@ -72,7 +72,7 @@ nav.navbar {
     margin-left: auto;
 }
 .puma_wrapper{
-    position: relative;
+    
     z-index: 3;
     width: 100%;
 }
@@ -398,6 +398,13 @@ h4.title_wrapper{
 }
 .rules_wrapper{
     padding: 60px 0 46px 0 ;
+}
+#rules_chevron_down {
+    cursor: pointer;
+}
+.rules_wrapper img.rotate {
+    transform: rotate(180deg);
+    transition: 0.3s all linear;
 }
 .rules_wrapper img {
     width: 19px;
